--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "@use-gesture/react": "^10.2.20",
     "classnames": "^2.3.2",
+    "data-lathe": "^0.1.0",
     "immer": "^9.0.15",
     "lodash": "^4.17.21",
     "lodash-move": "^1.1.1",
@@ -21,7 +22,6 @@
     "react-inlinesvg": "^3.0.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
-    "react-spring-flip": "^2.1.0",
     "react-use-measure": "^2.1.1",
     "sass": "^1.54.4",
     "typescript": "^4.7.4",
