--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
-    "include": ["src/**/*.ts"],
-    "exclude": ["dist"],
-    "compilerOptions": {
-      "esModuleInterop": true,
-      "rootDir": "src",
-      "target": "ESNext",
-      "module": "ESNext",
-      "declaration": true,
-      "declarationDir": "./",
-    }
+  "include": ["src/**/*.ts"],
+  "exclude": ["dist"],
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "rootDir": "src",
+    "target": "ESNext",
+    "module": "ESNext",
+    "declaration": true,
+    "declarationDir": "./"
+  }
 }
