--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-lathe",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A utility library for transforming and reshaping normalized data",
   "type": "module",
   "main": "./index.js",
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "build": "rm -rf dist/* && rollup --config",
-    "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test": "vitest --watch",
+    "test:ci": "vitest --ci"
   },
   "browserslist": {
     "production": [
@@ -30,6 +30,7 @@
     "jest": "^29.1.2",
     "rollup": "^3.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vitest": "^3.2.4"
   }
 }
