--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@observablehq/plot": "^0.5.2",
+    "@observablehq/plot": "0.6.17",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "@use-gesture/react": "^10.2.20",
     "classnames": "^2.3.2",
-    "data-lathe": "^0.1.0",
+    "data-lathe": "^0.4.0",
     "immer": "^9.0.15",
     "lodash": "^4.17.21",
     "lodash-move": "^1.1.1",
@@ -23,10 +23,10 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
     "react-use-measure": "^2.1.1",
-    "sass": "^1.54.4",
-    "typescript": "^4.7.4",
+    "sass": "1.89.2",
+    "typescript": "5.8.3",
     "usehooks-ts": "^2.7.2",
-    "uuid": "^9.0.0",
+    "uuid": "11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
