--- a/docs/package.json
+++ b/docs/package.json
@@ -1,56 +1,41 @@
 {
-  "name": "lathe",
-  "version": "0.1.0",
+  "name": "docs2",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@observablehq/plot": "0.6.17",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^28.1.7",
-    "@types/node": "^18.7.6",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@use-gesture/react": "^10.2.20",
-    "classnames": "^2.3.2",
+    "@observablehq/plot": "^0.6.17",
+    "@use-gesture/react": "^10.3.1",
+    "classnames": "^2.5.1",
     "data-lathe": "^0.4.0",
-    "immer": "^9.0.15",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lodash-move": "^1.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-inlinesvg": "^3.0.1",
-    "react-scripts": "5.0.1",
-    "react-spring": "^9.5.5",
-    "react-use-measure": "^2.1.1",
-    "sass": "1.89.2",
-    "typescript": "5.8.3",
-    "usehooks-ts": "^2.7.2",
-    "uuid": "11.1.0",
-    "web-vitals": "^2.1.4"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-inlinesvg": "^4.2.0",
+    "react-spring": "^10.0.1",
+    "react-use-measure": "^2.1.7",
+    "sass": "^1.89.2",
+    "usehooks-ts": "^3.1.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.30.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.35.1",
+    "vite": "^7.0.4"
   }
 }
